--- a/cmake/arch/default/README
+++ b/cmake/arch/default/README
@@ -49,9 +49,11 @@ For Fortran, the following variables must at a minimum be defined after all avai
 
 set(preprocess "-cpp")
 set(io "-fconvert=big-endian -frecord-marker=4")
+set(promotion "-fdefault-real-8")
 
 'preprocess' defines the flag for enabling the preprocessor on Fortran files.
 'io' defines the flags for Fortran unformatted I/O which for WRF should be big endian and 4 byte record length block size.
+'promotion' defines the flag to promote reals to 8 byte.
 
 The following variables are optional:
 
